# context-keeper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  server.json  server.py
.github/workflows/: tests.yml
hooks/: post_compact.py  pre_compact.py
tests/: test_server.py
