[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-keeper-mcp"
version = "0.2.0"
description = "MCP server that maintains project context (decisions, pipelines, constraints) across Claude conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jonathan Armstrong", email = "jarmstrong158@gmail.com" },
]
keywords = ["mcp", "context", "memory", "claude", "model-context-protocol", "decisions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jarmstrong158/context-keeper"
Repository = "https://github.com/jarmstrong158/context-keeper"
Issues = "https://github.com/jarmstrong158/context-keeper/issues"

[project.scripts]
context-keeper = "server:main"

[tool.hatch.build.targets.sdist]
include = [
    "server.py",
    "hooks/pre_compact.py",
    "hooks/post_compact.py",
    "LICENSE",
    "README.md",
    "CLAUDE.md",
]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
"CLAUDE.md" = "CLAUDE.md"
"hooks/pre_compact.py" = "hooks/pre_compact.py"
"hooks/post_compact.py" = "hooks/post_compact.py"
